--- a/quickshell/translations/template.json
+++ b/quickshell/translations/template.json
@@ -665,13 +665,6 @@
     "comment": ""
   },
   {
-    "term": "Automatically calculate popup distance from bar edge.",
-    "translation": "",
-    "context": "",
-    "reference": "",
-    "comment": ""
-  },
-  {
     "term": "Automatically cycle through wallpapers in the same folder",
     "translation": "",
     "context": "",
@@ -687,13 +680,6 @@
   },
   {
     "term": "Automatically determine your location using your IP address",
-    "translation": "",
-    "context": "",
-    "reference": "",
-    "comment": ""
-  },
-  {
-    "term": "Automatically hide the top bar to expand screen real estate",
     "translation": "",
     "context": "",
     "reference": "",
@@ -1127,13 +1113,6 @@
     "comment": ""
   },
   {
-    "term": "Choose the widget outline accent color",
-    "translation": "",
-    "context": "",
-    "reference": "",
-    "comment": ""
-  },
-  {
     "term": "Choose where notification popups appear on screen",
     "translation": "",
     "context": "",
@@ -1240,6 +1219,13 @@
   },
   {
     "term": "Close Overview on Launch",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Color",
     "translation": "",
     "context": "",
     "reference": "",
@@ -1499,6 +1485,13 @@
   },
   {
     "term": "Corner Radius Override",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Corners & Background",
     "translation": "",
     "context": "",
     "reference": "",
@@ -2184,7 +2177,7 @@
     "comment": ""
   },
   {
-    "term": "Edge Spacing (0 = edge-to-edge)",
+    "term": "Edge Spacing",
     "translation": "",
     "context": "",
     "reference": "",
@@ -2213,6 +2206,13 @@
   },
   {
     "term": "Enable Bar",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Enable Border",
     "translation": "",
     "context": "",
     "reference": "",
@@ -2255,6 +2255,13 @@
   },
   {
     "term": "Enable WiFi",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Enable Widget Outline",
     "translation": "",
     "context": "",
     "reference": "",
@@ -3024,7 +3031,7 @@
     "comment": ""
   },
   {
-    "term": "Hide Delay (ms)",
+    "term": "Hide Delay",
     "translation": "",
     "context": "",
     "reference": "",
@@ -4466,13 +4473,6 @@
     "comment": ""
   },
   {
-    "term": "Outline Color",
-    "translation": "",
-    "context": "",
-    "reference": "",
-    "comment": ""
-  },
-  {
     "term": "Outline Opacity",
     "translation": "",
     "context": "",
@@ -5412,6 +5412,13 @@
   },
   {
     "term": "Select Application",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Select Bar",
     "translation": "",
     "context": "",
     "reference": "",
@@ -6426,13 +6433,6 @@
     "comment": ""
   },
   {
-    "term": "Toggle top bar visibility manually (can be controlled via IPC)",
-    "translation": "",
-    "context": "",
-    "reference": "",
-    "comment": ""
-  },
-  {
     "term": "Toggle visibility of this bar configuration",
     "translation": "",
     "context": "",
@@ -7029,6 +7029,13 @@
   },
   {
     "term": "Widget Transparency",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Widgets",
     "translation": "",
     "context": "",
     "reference": "",
